fix: убран ненужный z-index

--- a/src/components/Header/LanguageChange/LanguageChange.module.scss
+++ b/src/components/Header/LanguageChange/LanguageChange.module.scss
@@ -9,7 +9,6 @@
     cursor: pointer;
 
     position: relative;
-    z-index: 6;
 
     &::before {
       content: "";
